new dialog to allow reordering of match days